objects/FLODocs__Strongpoint_Jira_Integration_Status__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FLODocs__cr_approved__c</fullName>
        <description>Add the Jira statuses who map to &quot;Approved&quot; status on the Change Request</description>
        <inlineHelpText>Add the Jira statuses who map to &quot;Approved&quot; status on the Change Request</inlineHelpText>
        <label>CR Approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__cr_complete__c</fullName>
        <description>Add the Jira statuses who map to &quot;Complete&quot; status on the Change Request</description>
        <inlineHelpText>Add the Jira statuses who map to &quot;Complete&quot; status on the Change Request</inlineHelpText>
        <label>CR Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__cr_in_progress__c</fullName>
        <description>Add the Jira statuses who map to &quot;In Progress&quot; status on the Change Request</description>
        <inlineHelpText>Add the Jira statuses who map to &quot;In Progress&quot; status on the Change Request</inlineHelpText>
        <label>CR In Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__cr_pending_approval__c</fullName>
        <description>Add the Jira statuses who map to &quot;Pending Approval&quot; status on the Change Request</description>
        <inlineHelpText>Add the Jira statuses who map to &quot;Pending Approval&quot; status on the Change Request</inlineHelpText>
        <label>CR Pending Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__is_automatic_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automatic Sync</label>
        <type>Checkbox</type>
    </fields>
    <label>Strongpoint Jira Integration Status</label>
</CustomObject>